css/index.css
:root {
  --var-primary-color-theme: rgb(255, 255, 255);
  --var-secondary-color-theme: rgb(186, 186, 186);
  --var-primary-text-color-theme: rgb(27, 27, 27);
  --var-secondary-text-color-theme: rgb(62, 62, 62);

  --var-card-width: 450px;
}

html,
body {
  font-size: 20px;

  padding: 1rem;
  max-width: 1100px;

  margin: 0 auto;
  box-sizing: border-box;

  background: var(--var-primary-color-theme);
  color: var(--var-primary-text-color-theme);
}

#intro {
  margin-top: 1rem;
  margin-bottom: 1rem;
  padding: 1rem;
}

.warped {
  -webkit-filter: url("#squiggly");
  filter: url("#squiggly");
}

header {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
}

.heading {
  font-size: 3rem;
  font-style: italic;
  color: #8bc462;
}

.subheading {
  font-size: 1.25rem;

  -webkit-filter: url("#squiggly");
  filter: url("#squiggly");
  font-family: sans-serif;

  color: #8bc462;
}

.listheading {
  font-size: 1.1rem;

  -webkit-filter: url("#squiggly");
  filter: url("#squiggly");
  font-family: sans-serif;

  color: #8bc462;
}

.listheading::before {
  content: "✴ ";
  color: orange;
}

a {
  color: cornflowerblue;
  text-decoration: none;
  font-family: sans-serif;
  font-size: 0.9rem;
  font-weight: 500;
}

a:hover {
  text-decoration: underline;
  text-decoration-style: dashed;
  text-decoration-thickness: 2px;
  font-weight: 600;
}

menu {
  margin: 0;
  padding: 0;
  padding-top: 1rem;

  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(min(4rem, 100%), 1fr));
  gap: 1rem;
}

menu > li,
menu > li > a {
  display: inline;
  width: fit-content;
  padding: 0.2rem;

  color: inherit;
  font-size: 1.3rem;
}

menu > li:hover {
  background: #8bc462;
  color: rgb(27, 27, 27);
}

li > a {
  text-decoration: none;
  font-family: sans-serif;
}

ul {
  padding: 0;
  list-style: none;

  display: grid;
  grid-template-columns: repeat(
    auto-fit,
    minmax(min(var(--var-card-width), 100%), 1fr)
  );
  gap: 1rem;
}

article {
  display: grid;
  padding: 1.25rem;
  max-width: var(--var-card-width);
}

article:hover {
  background: rgb(10, 10, 10);
}

article > p {
  width: 90%;
  margin: 5px;
}

.preview {
  aspect-ratio: 2/1.3;
  object-fit: cover;
  width: var(--var-card-width);
  max-width: 100%;
  border: 1px solid black;
}

i {
  color: var(--var-secondary-text-color-theme);
}

#profile {
  width: 35%;
  object-fit: contain;
}

#about {
  width: 60%;
}

@media (max-width: 800px) {
  #about {
    width: 100%;
  }
}
@media (max-width: 500px) {
  html,
  body {
    font-size: 16px;
  }
  h1 {
    font-size: 2.5rem;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --var-primary-color-theme: rgb(27, 27, 27);
    --var-secondary-color-theme: rgb(75, 75, 75);
    --var-primary-text-color-theme: lightgray;
    --var-secondary-text-color-theme: rgb(183, 183, 183);
  }
  .contact {
    filter: brightness(1);
  }
}

